--- a/AboutMe.html
+++ b/AboutMe.html
@@ -188,12 +188,12 @@
             <div class="box-1">
               <h1>Dragomir Mihai-Andrei</h1>
               <p>
-                My name is <b>Dragomir Mihai-Andrei</b> and i have 16 years old.I am in high school and live in Romania. My favourite sujects at shcool are math and sports. My hobbies are watching series,coding and playing virtual games,such as Valorant,Minecraft,etc.
+                My name is <b>Dragomir Mihai-Andrei</b> and i am 16 years old.I am in high school and live in Romania. My favourite sujects at shcool are math and sports. My hobbies are watching series,coding and playing virtual games,such as Valorant,Minecraft,etc.
               </p>
               <div class="parallax">
                 </div>
                 <p>
-                  I am a comunicative and very friendly person. I really like learning new things,and as for my future,i whould like a career i  would like a job where i can't stop developing my skills.
+                  I am a comunicative and very friendly person. I really like learning new things,and as for my future,i whould like a career where i can't stop developing my skills.
                 </p>
                 <p class="multumiri">
                   I am making this website,as i worked in the past with website,but i never actually got to release one. As the following,i would like suggestions at my <a link href="https://www.facebook.com/andreimihai.dragomir">Facebook</a> or <a link href="https://www.instagram.com/andreimihaidragomir/">Instagram</a>.
