--- a/AboutMe.html
+++ b/AboutMe.html
@@ -188,7 +188,7 @@
             <div class="box-1">
               <h1>Dragomir Mihai-Andrei</h1>
               <p>
-                My name is <b>Dragomir Mihai-Andrei</b> and i am 16 years old.I am in high school and live in Romania. My favourite sujects at shcool are math and sports. My hobbies are watching series,coding and playing virtual games,such as Valorant,Minecraft,etc.
+                My name is <b>Dragomir Mihai-Andrei</b> and i am 16 years old.I am in high school and live in Romania. My favourite subjects at shcool are math and sports. My hobbies are watching series,coding and playing virtual games,such as Valorant,Minecraft,etc.
               </p>
               <div class="parallax">
                 </div>
