--- a/AboutMe.html
+++ b/AboutMe.html
@@ -39,7 +39,7 @@
                   </li>
                   
                   <li class="nav-item">
-                    <a href="Projects.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                       <svg
                         aria-hidden="true"
                         focusable="false"
