--- a/Projects.html
+++ b/Projects.html
@@ -10,7 +10,7 @@
             <nav class="navbar">
                 <ul class="navbar-nav">
                   <li class="logo">
-                    <a href="Pagina prezentare.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                       <span class="link-text logo-text">Mishu.dev</span>
                       <svg
                         aria-hidden="true"
