--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     
 <head>
   <title>MishuDeveloper</title>
-    <link rel="stylesheet" href="Pagina prezentare.css">
+    <link rel="stylesheet" href="./src/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <script defer src="theme.js"></script>
+    <script defer src="./src/js/main.js"></script>
 </head>
 <body>
    
@@ -65,7 +65,7 @@
                     d="M376 144a16 16 0 1 0 16 16 16 16 0 0 0-16-16zm80 0a16 16 0 1 0 16 16 16 16 0 0 0-16-16zM131.06 273.53L192 304l-23.52-70.56a192.06 192.06 0 0 0-37.42 40.09zM256 272v-77.11a198.62 198.62 0 0 0-43.15 12.38z"
                     class="fa-primary"
                   ></path>
-                </g><a href="Projects.html">
+                </g><a href="./src/pages/projects.html">
               </svg>
              
               <span class="link-text">Projects</span>
