--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,6 +1,6 @@
 <html>
     <title>MishuDeveloper</title>
-    <link rel="stylesheet" href="../css/AboutMe.css">
+    <link rel="stylesheet" href="../css/about.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap">
     <script defer src="../js/main.js"></script>
 
