--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="box-1">
     <h1>
       Presentation page</h1>
-        <p>You can download ClickBoxer <a href="ClickBoxer.apk" download="ClickBoxer"> Here</a>
+        <p> Welcome and have fun! :D
     </p>
     </div>
 </main>
