--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -194,11 +194,11 @@
             </div>
             <div class="box-1">
               <h1>ClikerBox</h1>
-              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=_6_8U6pzX1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=TqnrOSa42W8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <p><b>ClikerBox</b> is a game build by me,in Unity,using C#.Its a cliker game where you hit a punching bag to earn <i>Power</i> with which you can buy upgrades:
                 <li>At 25 Power you can buy a +1 upgrade;</li>
-                <li>At 50 Power you can buy a +10 upgrade;</li>
-                <li>At 1500 Power you can buy a +100 upgrade.</li>
+                <li>At 50 Power you can buy a +3 upgrade;</li>
+                <li>At 1500 Power you can buy a +5 upgrade.</li>
               </p>
             
             </div>
