--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -204,7 +204,7 @@
             </div>
               <div class="box-1">
                 <h1>BoredApp</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DVTXA1BWsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=TqnrOSa42W8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 
                 <p><b> BoredApp</b> is an aplication build by me,in Android Studio,using Java. I build it for when someone is bored and it contains:
                   <li>A piano with pressing annimations and,of course,sound;</li>
