--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </li>
     
           <li class="nav-item" id="themeButton">
-            
+            <a href="" class="nav-link">
               <svg
                 class="theme-icon"
                 id="lightIcon"
