--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Me - Dragomir Mihai Andrei</title>
-  <link rel="stylesheet" href="src/css/about.css" />
+  <link rel="stylesheet" href="Mishu12111.github.io/src/css/about.css" />
 </head>
 <body>
 
   <!-- NAVIGATION BAR (matching your Projects page style) -->
   <nav class="navbar">
-    <div class="nav-links">
+    <div class="nav-right">
       <a href="comingsoon.html">COMING SOON</a>
       <a href="hobbies.html">HOBBIES</a>
       <a href="projects.html">MY PROJECTS</a>
-      <a href="about.html" class="active">ABOUT ME</a>
+      <a href="index.html" class="active">ABOUT ME</a>
     </div>
   </nav>
 
   <!-- MAIN CONTENT -->
   <main class="hero">
     <div class="center-content">
-      <!-- Your Profile Photo in the middle -->
-      <img src="Poze/profile.jpg" alt="Profile Photo" class="profile-pic" />
 
       <!-- Your Name -->
       <h1 class="name">Dragomir Mihai Andrei</h1>
@@ -34,13 +32,13 @@
       <!-- Social Icons (Use your own .png/.svg files) -->
       <div class="socials">
         <a href="https://instagram.com/" target="_blank">
-          <img src="instagram.png" alt="Instagram" class="icon" />
+          <img src="Mishu12111.github.io/src/Poze/icons/instagram.webp" alt="Instagram" class="icon" />
         </a>
         <a href="https://linkedin.com/" target="_blank">
-          <img src="linkedin.png" alt="LinkedIn" class="icon" />
+          <img src="Mishu12111.github.io/src/Poze/icons/linkedin.webp" alt="LinkedIn" class="icon" />
         </a>
         <a href="https://youtube.com/" target="_blank">
-          <img src="youtube.png" alt="YouTube" class="icon" />
+          <img src="Mishu12111.github.io/src/Poze/icons/youtube.webp" alt="YouTube" class="icon" />
         </a>
       </div>
     </div>
