--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Me - Dragomir Mihai Andrei</title>
-  <link rel="stylesheet" href="Mishu12111.github.io/src/css/about.css" />
+  <link rel="stylesheet" href="/src/css/about.css" />
 </head>
 <body>
 
   <!-- NAVIGATION BAR (matching your Projects page style) -->
   <nav class="navbar">
     <div class="nav-right">
-      <a href="comingsoon.html">COMING SOON</a>
+      <a href="/src/Pages/comingsoon.html">COMING SOON</a>
       <a href="hobbies.html">HOBBIES</a>
       <a href="projects.html">MY PROJECTS</a>
       <a href="index.html" class="active">ABOUT ME</a>
