--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Me - Dragomir Mihai Andrei</title>
-  <link rel="stylesheet" href="/src/css/about.css" />
+  <link rel="stylesheet" href="/src/css/index.css" />
 </head>
 <body>
 
