--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <nav class="navbar">
     <div class="nav-right">
       <a href="/src/Pages/comingsoon.html">COMING SOON</a>
-      <a href="hobbies.html">HOBBIES</a>
-      <a href="projects.html">MY PROJECTS</a>
-      <a href="index.html" class="active">ABOUT ME</a>
+      <a href="/src/Pages/hobbies.html">HOBBIES</a>
+      <a href="/src/Pages/projects.html">MY PROJECTS</a>
+      <a href="/src/Pages/index.html" class="active">ABOUT ME</a>
     </div>
   </nav>
 
@@ -32,13 +32,13 @@
       <!-- Social Icons (Use your own .png/.svg files) -->
       <div class="socials">
         <a href="https://instagram.com/" target="_blank">
-          <img src="Mishu12111.github.io/src/Poze/icons/instagram.webp" alt="Instagram" class="icon" />
+          <img src="/src/Poze/icons/instagram.webp" alt="Instagram" class="icon" />
         </a>
         <a href="https://linkedin.com/" target="_blank">
-          <img src="Mishu12111.github.io/src/Poze/icons/linkedin.webp" alt="LinkedIn" class="icon" />
+          <img src="/src/Poze/icons/linkedin.webp" alt="LinkedIn" class="icon" />
         </a>
         <a href="https://youtube.com/" target="_blank">
-          <img src="Mishu12111.github.io/src/Poze/icons/youtube.webp" alt="YouTube" class="icon" />
+          <img src="/src/Poze/icons/youtube.webp" alt="YouTube" class="icon" />
         </a>
       </div>
     </div>
