--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <!-- NAVIGATION BAR (matching your Projects page style) -->
   <nav class="navbar">
     <div class="nav-right">
-      <a href="/src/Pages/comingsoon.html">COMING SOON</a>
-      <a href="/src/Pages/hobbies.html">HOBBIES</a>
-      <a href="/src/Pages/projects.html">MY PROJECTS</a>
-      <a href="/src/Pages/index.html" class="active">ABOUT ME</a>
+      <a href="/src/pages/comingsoon.html">COMING SOON</a>
+      <a href="/src/pages/hobbies.html">HOBBIES</a>
+      <a href="/src/pages/projects.html">MY PROJECTS</a>
+      <a href="index.html" class="active">ABOUT ME</a>
     </div>
   </nav>
 
